--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -661,3 +661,126 @@ header {
     line-height: 1.6;
     color: #444;
 }
+
+@keyframes float {
+
+    0%,
+    100% {
+        transform: translateY(0)
+    }
+
+    50% {
+        transform: translateY(-10px)
+    }
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg)
+    }
+}
+
+
+@media (max-width: 1024px) {
+    .hero-wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    .hero-sidebar {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .floating-stat {
+        margin-top: -50px;
+        margin-left: 20px;
+    }
+
+    .app-container {
+        padding: 30px;
+    }
+
+    .camp-grid {
+        grid-template-columns: 1fr;
+        height: auto;
+    }
+
+    .c-large {
+        flex-direction: column-reverse;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .nav-pills {
+        display: none;
+    }
+
+    .hero-sidebar {
+        flex-direction: column;
+    }
+
+    .mission-section,
+    .features-grid,
+    .contact-grid,
+    .stats-bar {
+        grid-template-columns: 1fr;
+        flex-direction: column;
+    }
+
+    .stats-bar {
+        gap: 30px;
+    }
+
+    .features-left {
+        order: 2;
+    }
+
+    .feat-card-large {
+        order: 1;
+        min-height: 300px;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    .search-box {
+        flex-direction: column;
+        border-radius: 20px;
+        padding: 5px;
+        height: auto;
+    }
+
+    .search-box #botao-busca {
+        position: relative;
+        width: 100%;
+        right: auto;
+        top: auto;
+        bottom: auto;
+        margin-top: 5px;
+        height: 45px;
+    }
+
+    .search-box input {
+        padding-right: 50px;
+        width: 100%;
+        height: 50px;
+    }
+
+    .clear-btn {
+        right: 20px;
+        top: 30px;
+        transform: translateY(-50%);
+        font-size: 28px;
+    }
+
+    .search-icon {
+        top: 30px;
+        transform: translateY(-50%);
+    }
+}
